--- a/cava/cava.csproj
+++ b/cava/cava.csproj
@@ -170,14 +170,21 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BarController.cs" />
+    <Compile Include="Controllers\ExperienceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KitchenController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Bar.cs" />
+    <Compile Include="Models\Experience.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Kitchen.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Reservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -190,6 +197,13 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\default.css" />
     <Content Include="Content\images\background.jpg" />
+    <Content Include="Content\images\Icons\CAVA - INDIVIDUAL.png" />
+    <Content Include="Content\images\IMG_9893.jpg" />
+    <Content Include="Content\images\Kitchen\cava_141.jpg" />
+    <Content Include="Content\images\Kitchen\cava_157.jpg" />
+    <Content Include="Content\images\Kitchen\cava_83.jpg" />
+    <Content Include="Content\images\Kitchen\cava_86.jpg" />
+    <Content Include="Content\images\Kitchen\cava_92.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -342,6 +356,9 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Experience\Index.cshtml" />
+    <Content Include="Views\Bar\Index.cshtml" />
+    <Content Include="Views\Kitchen\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
