--- a/cava/cava.csproj
+++ b/cava/cava.csproj
@@ -197,6 +197,11 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\default.css" />
     <Content Include="Content\images\background.jpg" />
+    <Content Include="Content\images\Bar\cava_130.jpg" />
+    <Content Include="Content\images\Bar\cava_137.jpg" />
+    <Content Include="Content\images\Bar\cava_158.jpg" />
+    <Content Include="Content\images\Bar\cava_160.jpg" />
+    <Content Include="Content\images\Bar\cava_91.jpg" />
     <Content Include="Content\images\Icons\CAVA - INDIVIDUAL.png" />
     <Content Include="Content\images\IMG_9893.jpg" />
     <Content Include="Content\images\Kitchen\cava_141.jpg" />
@@ -230,6 +235,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
