--- a/cava/cava.csproj
+++ b/cava/cava.csproj
@@ -169,18 +169,16 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Controllers\ReservationController.cs" />
     <Compile Include="Custom\Cultures\CostaRicanCulture.cs" />
     <Compile Include="Custom\Serialization\Serializer.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\BarController.cs" />
-    <Compile Include="Controllers\ExperienceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\KitchenController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Enums\Enums.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Bar.cs" />
     <Compile Include="Models\Experience.cs" />
