--- a/cava/Web.config
+++ b/cava/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <!--local-->
     <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
+    <!--production-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
