--- a/cava/cava.csproj
+++ b/cava/cava.csproj
@@ -4281,6 +4281,7 @@
     <Content Include="Scripts\popper.min.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\login.js" />
     <Content Include="Scripts\reservationretrieve.js" />
     <Content Include="Scripts\reservationhandler.js" />
     <Content Include="Scripts\reservation.js" />
@@ -4371,7 +4372,7 @@
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
