--- a/cava/Web.config
+++ b/cava/Web.config
@@ -19,6 +19,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="NoReplyEmail" value="administracion@cavarestobar.com" />
+    <add key="adminEmail" value="pavr1@hotmail.com" />
+    <!--"no-reply@cavarestobar.com"-->
+    <add key="MailHost" value="mail.cavarestobar.com" />
+    <add key="MailPort" value="25" />
+    <add key="NotificationsUser" value="administracion@cavarestobar.com" />
+    <add key="NotificationsPassword" value="villaPab1234!" />
+    <add key="EmailAdminFormat" value=""/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
