--- a/cava/cava.csproj
+++ b/cava/cava.csproj
@@ -170,6 +170,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Custom\Cultures\CostaRicanCulture.cs" />
+    <Compile Include="Custom\Notification\EmailSender.cs" />
     <Compile Include="Custom\Serialization\Serializer.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
