--- a/cava/Web.config
+++ b/cava/Web.config
@@ -10,16 +10,16 @@
   </configSections>
   <connectionStrings>
     <!--local-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
     <!--production-->
-    <add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient"/>
+    <!--<add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="NoReplyEmail" value="administracion@cavarestobar.com" />
+    <add key="CavaAdminEmail" value="administracion@cavarestobar.com" />
     <add key="adminEmail" value="pavr1@hotmail.com" />
     <!--"no-reply@cavarestobar.com"-->
     <add key="MailHost" value="mail.cavarestobar.com" />
