Changed design still need to check changes

--- a/cava/Web.config
+++ b/cava/Web.config
@@ -26,7 +26,9 @@
     <add key="MailPort" value="8889" />
     <add key="NotificationsUser" value="administracion@cavarestobar.com" />
     <add key="NotificationsPassword" value="villaPab1234!" />
-    <add key="EmailAdminFormat" value=""/>
+    <add key="WhatsappLink" value="https://wa.me/"/>
+    <add key="WhatsappPhone" value="+50688012201"/>
+    <add key="WhatsappMessage" value="Hola Cava!"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
