--- a/cava/Web.config
+++ b/cava/Web.config
@@ -29,6 +29,12 @@
     <add key="WhatsappLink" value="https://wa.me/"/>
     <add key="WhatsappPhone" value="+50688012201"/>
     <add key="WhatsappMessage" value="Hola Cava!"/>
+    <add key="FacebookLink" value="https://facebook.com"/>
+    <add key="InstagramLink" value=""/>
+    <add key="Schedules" value="MARTES A SÁBADO DESDE LAS 12:00 MD|DOMINGO BRUNCH 11:00 AM - 4:00 PM"/>
+    <add key="BriefDescription" value="Nuestro arte culinario es internacional , trabajamos con los cinco sentidos entre ahumados de raíces curativas  y sabores regionales muchas veces ya olvidados en las cocinas actuales .
+                Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables . Reinterprétamos la variedad de ideas y las evolucionamos , pero tenemos las raíces puestas en la historia y la mística
+                El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia  y métodos de cocción mixtos utilizando insumos etnicos oriundos de CR"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
