UI changes based on Roberto's comments

--- a/cava/Web.config
+++ b/cava/Web.config
@@ -35,6 +35,7 @@
     <add key="BriefDescription" value="Nuestro arte culinario es internacional , trabajamos con los cinco sentidos entre ahumados de raíces curativas  y sabores regionales muchas veces ya olvidados en las cocinas actuales .
                 Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables . Reinterprétamos la variedad de ideas y las evolucionamos , pero tenemos las raíces puestas en la historia y la mística
                 El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia  y métodos de cocción mixtos utilizando insumos etnicos oriundos de CR"/>
+    <add key="ReservationReasons" value="CUMPLEAÑOS|CORPORATIVO|EVENTO PRIVADO"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
