Added functionality for slides

--- a/cava/Web.config
+++ b/cava/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--local-->
-    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />-->
     <!--production-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient"/>-->
+    <add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -26,16 +26,14 @@
     <add key="MailPort" value="8889" />
     <add key="NotificationsUser" value="administracion@cavarestobar.com" />
     <add key="NotificationsPassword" value="villaPab1234!" />
-    <add key="WhatsappLink" value="https://wa.me/"/>
-    <add key="WhatsappPhone" value="+50688012201"/>
-    <add key="WhatsappMessage" value="Hola Cava!"/>
-    <add key="FacebookLink" value="https://facebook.com"/>
-    <add key="InstagramLink" value=""/>
-    <add key="Schedules" value="MARTES A SÁBADO DESDE LAS 12:00 MD|DOMINGO BRUNCH 11:00 AM - 4:00 PM"/>
-    <add key="BriefDescription" value="Nuestro arte culinario es internacional , trabajamos con los cinco sentidos entre ahumados de raíces curativas  y sabores regionales muchas veces ya olvidados en las cocinas actuales .
-                Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables . Reinterprétamos la variedad de ideas y las evolucionamos , pero tenemos las raíces puestas en la historia y la mística
-                El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia  y métodos de cocción mixtos utilizando insumos etnicos oriundos de CR"/>
-    <add key="ReservationReasons" value="CUMPLEAÑOS|CORPORATIVO|EVENTO PRIVADO"/>
+    <add key="WhatsappLink" value="https://wa.me/" />
+    <add key="WhatsappPhone" value="+50688012201" />
+    <add key="WhatsappMessage" value="Hola Cava!" />
+    <add key="FacebookLink" value="https://facebook.com" />
+    <add key="InstagramLink" value="" />
+    <add key="Schedules" value="MARTES A SÁBADO DESDE LAS 12:00 MD|DOMINGO BRUNCH 11:00 AM - 4:00 PM" />
+    <add key="BriefDescription" value="Nuestro arte culinario es internacional , trabajamos con los cinco sentidos entre ahumados de raíces curativas  y sabores regionales muchas veces ya olvidados en las cocinas actuales .                 Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables . Reinterprétamos la variedad de ideas y las evolucionamos , pero tenemos las raíces puestas en la historia y la mística                 El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia  y métodos de cocción mixtos utilizando insumos etnicos oriundos de CR" />
+    <add key="ReservationReasons" value="CUMPLEAÑOS|CORPORATIVO|EVENTO PRIVADO" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
