--- a/cava/cava.csproj
+++ b/cava/cava.csproj
@@ -4020,114 +4020,48 @@
     <Content Include="Content\custom.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\images\background.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_102.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_26.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_29.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_49.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_56.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_69.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_72.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_96.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_978tif.jpg" />
-    <Content Include="Content\images\Bar\cava_febrero2021_99tif.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_21.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_23.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_24.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_29.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_34.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_37.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_45.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\cava_febrero2021_48.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\e1.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\e2.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Experience\e3.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\bootstrap-icons-1.3.0\icons.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\images\Icons\CAVA - INDIVIDUAL.png" />
-    <Content Include="Content\images\Icons\icon.png" />
-    <Content Include="Content\images\Icons\icon2.png" />
-    <Content Include="Content\images\IMG_9893.jpg" />
-    <Content Include="Content\images\Kitchen\cava_febrero2021_15.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Kitchen\cava_febrero2021_37.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Kitchen\cava_febrero2021_46.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Kitchen\cava_febrero2021_48.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Kitchen\cava_febrero2021_62.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Kitchen\cava_febrero2021_76.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Kitchen\cava_febrero2021_8.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\Kitchen\cava_febrero2021_88.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\images\logo-bg-orange.png" />
-    <Content Include="Content\images\whatsapp.png" />
     <Content Include="Content\jquery.datetimepicker.css" />
     <Content Include="Content\v2.0\audios\BackgroundAudio.m4a" />
     <Content Include="Content\v2.0\images\logos\logo1.png" />
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_15.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\logos\facebook.png" />
+    <Content Include="Content\v2.0\images\logos\instagram.png" />
+    <Content Include="Content\v2.0\images\slides\cava_febrero2021_15.jpg" />
+    <Content Include="Content\v2.0\images\slides\cava_febrero2021_8.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\lg-30\cava_febrero2021_15.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\lg-30\cava_febrero2021_8.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\md-20\cava_febrero2021_15.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\md-20\cava_febrero2021_8.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\sm-10\cava_febrero2021_15.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\sm-10\cava_febrero2021_8.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\xl-40\cava_febrero2021_15.jpg" />
+    <Content Include="Content\v2.0\images\slides\images\xl-40\cava_febrero2021_8.jpg" />
+    <Content Include="Content\v2.0\images\slides\sprites\lg-30\mysprite.sprite.css">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_37.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\slides\sprites\lg-30\mysprite.sprite.jpg">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_46.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\slides\sprites\md-20\mysprite.sprite.css">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_48.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\slides\sprites\md-20\mysprite.sprite.jpg">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_62.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\slides\sprites\sm-10\mysprite.sprite.css">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_76.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\slides\sprites\sm-10\mysprite.sprite.jpg">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_8.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\slides\sprites\xl-40\mysprite.sprite.css">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\images\slides\cava_febrero2021_88.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\v2.0\images\slides\sprites\xl-40\mysprite.sprite.jpg">
+      <DependentUpon>mysprite.sprite</DependentUpon>
     </Content>
-    <Content Include="Content\v2.0\logos\facebook.png" />
-    <Content Include="Content\v2.0\logos\instagram.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css">
@@ -4197,7 +4131,11 @@
     <Content Include="Content\bootstrap-icons-1.3.0\fonts\bootstrap-icons.woff2">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Content\v2.0\images\slides\sprites\lg-30\mysprite.sprite" />
+    <None Include="Content\v2.0\images\slides\sprites\md-20\mysprite.sprite" />
+    <None Include="Content\v2.0\images\slides\sprites\sm-10\mysprite.sprite" />
+    <None Include="Content\v2.0\images\slides\sprites\xl-40\mysprite.sprite" />
+    <None Include="Properties\PublishProfiles\cavarestobar_produccion.pubxml" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -4337,6 +4275,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\jquery.datetimepicker.full.js" />
+    <Content Include="Scripts\jquery.lazyload.js" />
+    <Content Include="Scripts\jquery.lazyload.min.js" />
     <Content Include="Scripts\jquery.scrollTo.min.js" />
     <Content Include="Scripts\jquery.validate.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
